--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
+header {
   text-align: center;
+  padding: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  margin: 0.5rem;
+  padding: 0.5rem 1rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.news-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 1rem;
+  padding: 1rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img.image-post {
+  width: 350px;
+}
+.news-card {
+  border: 1px solid #ddd;
+  padding: 1rem;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.news-card img {
+  max-width: 100%;
+  height: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.news-card a {
+  display: block;
+  margin-top: 1rem;
+  color: blue;
+  text-decoration: underline;
 }
